- Fixed Bug #46048 (SimpleXML top-level @attributes not part of iterator) - Added test for bug #46048